<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="320dp"
              android:layout_height="wrap_content"
              android:background="@drawable/dialog_bg"
              android:orientation="vertical"
              android:windowSoftInputMode="adjustResize">


    <TextView
        android:id="@+id/text_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/servie_add"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text18sp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ipordomain"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/title_color"
            android:textColorHint="@color/text_color"/>
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="@color/title_color"
            android:textSize="16sp"/>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@color/title_color"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>